Time: 5 ms (53.93%), Space: 47.5 MB (59.14%) - LeetHub